tests/asm-link/negative-ds/rgbasm.err
error: negative sizes are not allowed for `ds`
   ╭─[ test.asm:5:4 ]
   │
 5 │ ds -1
   │    ─┬  
   │     ╰── cannot emit -1 bytes of padding
   │ 
   │ Help: if you want multiple blocks of data to share the same space, consider using `union`
───╯
1 error generated.
